# Dollar-Exchange-Rate-Argentine-Banks

./: Dockerfile  Makefile  README.md  application.py  docker-compose.yml  pyproject.toml
app/: __init__.py  adapter.py  client.py  config.py  constants.py  error_handling.py  service.py  services.py  settings.py  view.py  views.py
app/api/index/: __init__.py  routes.py
app/api/v1/: __init__.py  constants.py  routes.py  services.py
