[tool.poetry]
name = "dollar-exchange-rate-argentine-banks"
version = "0.1.0"
description = ""
authors = ["RRodriQZ <rrquispezabala@gmail.com>"]
readme = "README.md"
packages = [{include = "dollar_exchange_rate_argentine_banks"}]

[tool.poetry.dependencies]
python = "^3.10"
Flask = "^2.2.3"
requests = "^2.28.2"
beautifulsoup4 = "^4.11.2"
pytz = "^2022.7.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
